--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.3.6",
     "next": "13.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sass": "^1.62.1"
+    "react-particles": "^2.9.3",
+    "sass": "^1.62.1",
+    "tsparticles": "^2.9.3"
   }
 }
