--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "antd": "^5.4.6",
+    "axios": "^1.4.0",
+    "classnames": "^2.3.2",
+    "framer-motion": "^10.12.4",
     "next": "13.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sass": "^1.62.1",
     "sass": "^1.62.1",
     "swiper": "^9.2.4"
   }
