--- a/package.json
+++ b/package.json
@@ -9,16 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "13.3.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-particles": "^2.9.3",
-    "tsparticles": "^2.9.3",
+    "@emotion/react": "^11.10.8",
+    "@emotion/styled": "^11.10.8",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.12.2",
     "antd": "^5.4.6",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "framer-motion": "^10.12.4",
+    "next": "13.3.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-particles": "^2.9.3",
+    "sass": "^1.62.1",
     "swiper": "^9.2.4",
-    "sass": "^1.62.1"
+    "tsparticles": "^2.9.3"
   }
 }
